# yew-tutorial-starter

./: Cargo.toml  index.html
src/: app.css  app.rs  main.rs  router.rs
src/components/: mod.rs
src/components/atoms/: main_title.rs  text_input.rs
src/components/molecules/: custom_form.rs
src/components/pages/: home.rs
