[package]
name = "starter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.6.1"
serde = "1.0.152"
serde_json = "1.0.91"
stylist = {version = "0.12", features = ["yew", "parser"]}
yew = {version = "0.20.0", features = ["csr"]}
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ["HtmlInputElement"]}
